@@ -7,7 +7,7 @@
 * Fix checking files in standard library before local file
 * Fix sys.exc_value, etc. generating No attribute warning in except clause
 * Fix Local variable (xxx) not used, when have:  "%(xxx)s" % locals()
-* Check function return values
+* Check function return values - partially complete
 * Finer grain control of warnings/config options (per module/class/method)
 * Allow import checker to catch errors, rather than starting checker.py
 * Find lines that end w/semi-colons (;)
