@@ -1,0 +1,8 @@
+Processing test20...
+
+Warnings...
+
+test_input/test20.py:10 Function returns a value and also implicitly returns None
+test_input/test20.py:21 Fuction return types are inconsistent
+test_input/test20.py:28 Fuction return types are inconsistent
+test_input/test20.py:40 Fuction return types are inconsistent
