@@ -1,0 +1,7 @@
+Processing test21...
+
+Warnings...
+
+test_input/test21.py:9 Fuction return types are inconsistent
+test_input/test21.py:15 Fuction return types are inconsistent
+test_input/test21.py:21 Fuction return types are inconsistent
