@@ -5,7 +5,8 @@ Version 0.5.1	- xx June 2001
   * Add check for right # of args to object construction
   * Add check for right # of args to function calls in other modules
   * Check for returning a value from __init__
-  * Experimental support for checking consistent return values
+  * Support for checking consistent return values - not complete and probably
+  	will produce false positives, although I don't have any test cases
 
 Version 0.5	- 29 May 2001
   * Catch internal errors "gracefully" and turn into a warning
